# django-elk

./: .gitignore  Dockerfile  Makefile  apm-server.yml  docker-compose.yml  init-elasticsearch.sh  logstash.conf  pyproject.toml  readme.md
app/config/: log_utils.py  middleware.py  urls.py
app/config/settings/: base.py  local.py
