[tool.poetry]
name = "django-elk-basic"
version = "0.1.0"
description = ""
authors = ["updaun <updauney@daum.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.7"
django-ninja = "^1.3.0"
django-cors-headers = "^4.7.0"
psycopg2-binary = "^2.9.10"
python-json-logger = "^3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
